Kareem adding his WebProfile

--- a/KareemAliRahman_T2/contact.html
+++ b/KareemAliRahman_T2/contact.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Contact me</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Welcome to Kareem ALi's Blog</h1>
