--- a/KareemAliRahman_T2/KareemAli-C1-SmartSoft-Task2.html
+++ b/KareemAliRahman_T2/KareemAli-C1-SmartSoft-Task2.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Kareem's Blog</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Welcome to Kareem ALi's Blog</h1>
@@ -15,7 +15,7 @@
 	<div class="Header">I'm Kareem studying Computer Science and Engineering at the German university in Cairo.I like reading and programming.I find programming very interesting and also I have other interests mainly in the computer science and engineering related fields.</div>
 	<div class="information">
 		<h3>Here is some information about me:</h3>
-		<img style="height: 200;width: 280;margin-right: 5px;float: right;" src="smiley_face_with_glasses_clip_art.jpg">
+		<img style="height: 200;width: 280;margin-right: 5px;float: right;" src="images/smiley_face_with_glasses_clip_art.jpg">
 		<ul>
 			<li>Name:Kareem ALi AbdelRahman</li>
 			<li>Zodiac:Cancer</li>
