Mirna added her profile

--- a/webProfile/webProfile.html
+++ b/webProfile/webProfile.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>WebProfile</title>
-	<link rel="stylesheet" type="text/css" href="ssc.css">
+	<link rel="stylesheet" type="text/css" href="css/ssc.css">
 	<script type="text/javascript">
 	function m()
 	{
@@ -10,7 +10,7 @@
 	</script>
 </head>
 <body  TOPMARGIN="50" LEFTMARGIN="50" MARGINHEIGHT="50" MARGINWIDTH="50">
-	<img src="me.jpg" width="200" align="right" hspace="100" border="5">
+	<img src="images/me.jpg" width="200" align="right" hspace="100" border="5">
 	<div>
 		<h1>About Me</h1>
 		
