--- a/html_task/m0hamed.html
+++ b/html_task/m0hamed.html
@@ -14,12 +14,16 @@
       margin: 1em;
       width: 200px;
     }
-    dl.list dd,dl.list dt {
-      display:inline;
-    }
     input.button {
       margin-left: 7em;
       text-align: center;
+    }
+    table.list td {
+      min-width:4em;
+    }
+    span.small {
+      font-size: 55%;
+      display: block;
     }
     </style>
     <script type="text/javascript"> 
@@ -31,14 +35,16 @@
 <body>
   <div class="profile">
     <img src="Mohamed-ashraf.jpg" alt="My profile pic" class="profile-pic" />
-    <dl class="list">
-      <dt>Name</dt>
-      <dd>Mohamed Ashraf</dd>
-      <br />
-      <dt>Age</dt>
-      <dd>19.9</dd>
-      <br />
-    </dl>
+    <table cellspacing="0" class="list">
+     <tr>
+       <td>Name</td>
+       <td>Mohamed Ashraf</td>
+     </tr>
+     <tr>
+       <td>Age</td>
+       <td>19.97 <span class="small">(Acording to wolfram alpha)</span></td>
+     </tr>
+    </table>
     <input type="button" class="button" name="button" value="Freska" onclick="button_clicked()" />
   </div>
 </body>
